<resources>
    <string name="app_name">Catering Services</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_no">Mobile No</string>
    <string name="register">Register</string>
    <string name="about">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="gallery">Gallery</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_no">+91 8828088787</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_no">+91 7977486385</string>
    <string name="facebook">Facebook</string>
    <string name="follow_us_on_fb">Follow us on our Facebook Page</string>
    <string name="location">Location</string>
    <string name="locate_us">Locate Us</string>
    <string name="gallery_text1">1. We believe in being all around catering service provide home made food, just like "Ghar Jaisa Khaana" with affortable price.</string>
    <string name="gallery_text2">2. This service provide food for parties, public or private get-together, wedding, and so on.</string>
    <string name="gallery_text3">3. A catering service providing quality product, imely delivery, special customer attention and provide facilities.</string>
    <string name="gallery_text4">4. We believe in providing tiffins in mumbai that are healthy, homely and hygienic.</string>
    <string name="gallery_text5">5. You have found your catering team for all occasions!</string>
    <string name="gallery_text6">6. Our website is designed to assist those who are planning Corporate Events, Weddings, Private Parties.</string>
    <string name="gallery_text7">7. Within, there is a wealth of information to help you plan your festive affair.</string>
    <string name="gallery_text8">8. As you prepare for your celebration, do not forget thid Catering App.</string>
    <string name="gallery_text9">9. Catering Service App is Mumbai\'s  first food-commerce tiffin service which allows you to
        order delicious home-style food in convenient packaging - ALL ONLINE.</string>
    <string name="events">Events</string>
    <string name="tiffin">Tiffin</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="select">Select</string>
    <string name="users">Users</string>
    <string name="reports">Reports</string>

    <string-array name="lables_array">
        <item>User</item>
        <item>Admin</item>
    </string-array>

    //Temporary Data
    <string name="text_accounts">Users</string>
    <string name="hint_name">User Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email Address</string>
    <string name="error_message_age">Enter Your Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Your Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member?</string>
    <string name="error_email_exists">Email Address Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email Address or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Welcome,</string>
    <string name="text_title">Login and Registration Demo App</string>

    //Intro Screen texts
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">GOT IT</string>
    <string name="biryani_dish">Biryani Mijaz</string>
    <string name="tandoori_dish">Tandoori Tadka</string>
    <string name="chocolates_dish">Chocolate Heaven</string>
    <string name="variety_dish">Variety of Dishes</string>
    <string name="ice_cream_dish">Icy Cold Ice Cream</string>
    <string name="dessert_dish">Desserts</string>
    <string name="communicate">Communicate</string>
    <string name="chinese_dishes">Authentic Chinese</string>
    <string name="juices">Refreshing Juices</string>
    <string name="indian_sweets_thali">Indian Sweets</string>
    <string name="salad_dishes">Healthy Salads</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="desserts">Desserts</string>
    <string name="chinese">Chinese</string>
    <string name="indian">Indian</string>
    <string name="north_indian">North Indian</string>
    <string name="south_indian">South Indian</string>
    <string name="biryani">Biryani</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="juice">Juices</string>
    <string name="street_food">Street Food</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="chicken">Chicken</string>
    <string name="american">American</string>
    <string name="italian">Italian</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="sea_food">Sea Food</string>
    <string name="bbq">BBQ</string>
    <string name="salads">Salads</string>
    <string name="lebanese">Lebanese</string>
    <string name="asian">Asian</string>
    <string name="mexican">Mexican</string>
    <string name="thai">Thai</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="european">European</string>
    <string name="french">French</string>
    <string name="belgian">Belgian</string>
    <string name="persian">Persian</string>
    <string name="northern_thai">Northern Thai</string>
    <string name="japanese">Japanese</string>
    <string name="spanish">Spanish</string>
    <string name="greek">Greek</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="food_item_amount_placeholder">30</string>
    <string name="add">Add</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="added">Added</string>
    <string name="food_cart">My Food Cart</string>
    <string name="place_order">Place Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="grand_total">Grand Total :</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="yes_button_of_alert">Yes</string>
    <string name="no_button_of_alert">No</string>
    <string name="app_close_alert_message">Are you sure you want to exit from this app?</string>
    <string name="app_close_alert_title">Confirmation</string>
    <string name="not_a_member_regsiter">Not a member yet?</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="zero">0</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="make_payment">Make Payment</string>
    <string name="food_type_name">Service Name :</string>
    <string name="food_service_type">Service Type</string>
    <string name="users_profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="user_details">User Details</string>
    <string name="full_name">Full Name</string>
    <string name="see_location">see your location</string>
    <string name="donate_food">Donate food</string>
    <string name="donte_description">we suggest you do your bit and donate it for the benefit of those who aren\'t as privileged as you are. Here\'s a list of five Indian NGOs that you can volunteer with, or donate food to, and ensure that fewer people in your city go hungry today. They take excess food from individuals, weddings, restaurants, and corporate offices, and donate it to the underprivileged.</string>
    <string name="click_here">Click Here</string>
    <string name="ngo_s_details">NGO\'s Details</string>
    <string name="Desc_ngo">No Food Waste is a mission to end food waste and hunger to make the “World Hunger Free”. We recover surplus food from weddings, parties and functions and donate it to needy and hungry people.</string>
    <string name="NGO_one_contact">To find out more about them, you can contact them on 91-9867-221-310 or +91-8652-760-542.</string>
    <string name="NGOone_name">Roti Bank by Dabbawalas</string>
    <string name="ngo_two_name">Reborn Humanity Association</string>
    <string name="ngo_two_contact">To find out more about them, you can contact them on . 91-9022189964.</string>
    <string name="help">Help</string>
    <string name="legal">Legal</string>
    <string name="information">Information</string>
    <string name="edit_account">Edit Account</string>
    <string name="saved_places">Saved Places</string>
    <string name="work">Work</string>
    <string name="delivery_details">Delivery &amp; Payment Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="when">When</string>
    <string name="other_options">Other Options</string>
    <string name="select_work_delivery_address">Select Work Delivery Address</string>
    <string name="enter_a_new_address">Enter a new address</string>
    <string name="save">Save</string>
    <string name="service_type">Service type</string>
    <string name="event_name">Event Name</string>
    <string name="asap_as_soon_as_possible">Asap (As Soon As Possible)</string>
    <string name="schedule_service">Schedule Service</string>
    <string name="schedule_an_order">Schedule an order</string>
    <string name="schedule_a_date">Date</string>
    <string name="schedule_a_time">Time</string>

    <string-array name="delivery_address_type">
        <item>Home</item>
        <item>Work</item>
    </string-array>

    <string-array name="services">
        <item>Tiffin</item>
        <item>Events</item>
    </string-array>

    <string name="date_picker">datePicker</string>
    <string name="time_picker">timePicker</string>
    <string name="date">"Date: "</string>
    <string name="time">"Time: "</string>
    <string name="manage_your_payments">Manage your payments</string>
    <string name="payments">Payments</string>
    <string name="no_of_dishes">No of Dishes</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="card_cvv">Card CVV</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="see_your_location">See Your Location</string>
    <string name="no_of_guests">No of Guests</string>
    <string name="no_of_people">No of People</string>
</resources>
