<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/home" />

        <item
            android:id="@+id/menu"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu" />

        <item
            android:id="@+id/gallery"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/gallery" />

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/about" />

    </group>

</menu>