<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutUsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/gallery_slider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_20">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/gallery_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/gallery_text1" />

                <TextView
                    android:id="@+id/gallery_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_text_1"
                    android:text="@string/gallery_text2" />

                <TextView
                    android:id="@+id/gallery_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_text_2"
                    android:text="@string/gallery_text3" />

                <TextView
                    android:id="@+id/gallery_text_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_text_3"
                    android:text="@string/gallery_text4" />
                <TextView
                    android:id="@+id/gallery_text_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_text_4"
                    android:text="@string/gallery_text5" />
                <TextView
                    android:id="@+id/gallery_text_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_text_5"
                    android:text="@string/gallery_text6" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>